# ui-old

./: Makefile.am  NOTICE  configure.ac  install
common/: Makefile.am  index.theme
common/metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
themes/Eloquent/: index.theme
